--- a/ResourceTMDBTest/Base.lproj/Main.storyboard
+++ b/ResourceTMDBTest/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wbG-VN-mr6">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wbG-VN-mr6">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -163,7 +163,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" id="T0w-fT-Sho"/>
+                    <navigationItem key="navigationItem" id="T0w-fT-Sho">
+                        <barButtonItem key="backBarButtonItem" title=" " id="TAc-DL-rwY"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="moviesTableView" destination="kHw-f1-NTN" id="aMX-DT-W20"/>
                     </connections>
@@ -171,6 +173,78 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="164" y="133.5832083958021"/>
+        </scene>
+        <!--Movie Detail Controller-->
+        <scene sceneID="25W-wI-u6s">
+            <objects>
+                <viewController storyboardIdentifier="movieDetail" id="0Il-NS-nDZ" customClass="MovieDetailController" customModule="ResourceTMDBTest" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="wuW-Jy-vn1">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NeF-A6-obH">
+                                <rect key="frame" x="16" y="40" width="343" height="130"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="130" id="Q8V-T0-ZuR"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nota: X.X" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="41d-8p-gDe">
+                                <rect key="frame" x="16" y="191" width="343" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Data: dd/MM/yyyy" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3B2-OP-tQx">
+                                <rect key="frame" x="16" y="220" width="343" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gênero: -" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v8M-FV-Pjo">
+                                <rect key="frame" x="16" y="249" width="343" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="185-nd-x3W">
+                                <rect key="frame" x="16" y="278" width="343" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="185-nd-x3W" firstAttribute="trailing" secondItem="v8M-FV-Pjo" secondAttribute="trailing" id="2eT-d5-Jki"/>
+                            <constraint firstItem="185-nd-x3W" firstAttribute="leading" secondItem="v8M-FV-Pjo" secondAttribute="leading" id="HnW-4e-eEF"/>
+                            <constraint firstItem="v8M-FV-Pjo" firstAttribute="top" secondItem="3B2-OP-tQx" secondAttribute="bottom" constant="8" id="OaZ-V5-u6X"/>
+                            <constraint firstItem="NeF-A6-obH" firstAttribute="leading" secondItem="9v3-SZ-ApJ" secondAttribute="leading" constant="16" id="P7h-Ll-wFV"/>
+                            <constraint firstItem="185-nd-x3W" firstAttribute="top" secondItem="v8M-FV-Pjo" secondAttribute="bottom" constant="8" id="YQd-6X-L7A"/>
+                            <constraint firstItem="3B2-OP-tQx" firstAttribute="trailing" secondItem="41d-8p-gDe" secondAttribute="trailing" id="Z2k-G0-uHD"/>
+                            <constraint firstItem="41d-8p-gDe" firstAttribute="leading" secondItem="9v3-SZ-ApJ" secondAttribute="leading" constant="16" id="ddB-8M-oDe"/>
+                            <constraint firstItem="NeF-A6-obH" firstAttribute="top" secondItem="9v3-SZ-ApJ" secondAttribute="top" constant="20" id="fQO-nd-ci6"/>
+                            <constraint firstItem="3B2-OP-tQx" firstAttribute="top" secondItem="41d-8p-gDe" secondAttribute="bottom" constant="8" id="guG-Fp-cr5"/>
+                            <constraint firstItem="v8M-FV-Pjo" firstAttribute="leading" secondItem="9v3-SZ-ApJ" secondAttribute="leading" constant="16" id="hUX-1m-pjt"/>
+                            <constraint firstItem="9v3-SZ-ApJ" firstAttribute="trailing" secondItem="NeF-A6-obH" secondAttribute="trailing" constant="16" id="jkI-MN-6TT"/>
+                            <constraint firstItem="3B2-OP-tQx" firstAttribute="leading" secondItem="9v3-SZ-ApJ" secondAttribute="leading" constant="16" id="lHx-VD-vYQ"/>
+                            <constraint firstItem="9v3-SZ-ApJ" firstAttribute="trailing" secondItem="41d-8p-gDe" secondAttribute="trailing" constant="16" id="nze-61-06s"/>
+                            <constraint firstItem="v8M-FV-Pjo" firstAttribute="trailing" secondItem="3B2-OP-tQx" secondAttribute="trailing" id="okn-ZM-ePW"/>
+                            <constraint firstItem="41d-8p-gDe" firstAttribute="top" secondItem="NeF-A6-obH" secondAttribute="bottom" constant="21" id="uaJ-Yf-zxq"/>
+                            <constraint firstItem="9v3-SZ-ApJ" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="185-nd-x3W" secondAttribute="bottom" constant="8" id="vNb-km-agd"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="9v3-SZ-ApJ"/>
+                    </view>
+                    <connections>
+                        <outlet property="dateLbl" destination="3B2-OP-tQx" id="XMD-GO-MCx"/>
+                        <outlet property="genreLbl" destination="v8M-FV-Pjo" id="mar-wW-Sh0"/>
+                        <outlet property="movieImg" destination="NeF-A6-obH" id="Cs7-7C-kOr"/>
+                        <outlet property="overviewLbl" destination="185-nd-x3W" id="DHe-sX-muM"/>
+                        <outlet property="rateLbl" destination="41d-8p-gDe" id="dqo-2J-aCS"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hjH-ac-dIg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="892" y="133.5832083958021"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="8I9-k0-qp1">
